canary/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-deploy
      version: v2
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        app: api-deploy
        version: v2
    spec:
      containers:
      - name: api-deploy
        image: kubedevio/api-versao:v2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
